--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="./css/styles.css"> 
 </head>
 <body>
-    <div class="main-content">
+    <div class="main-content">clear
+
     {{>header}}
+    <p>This sit was created by Majella Greene. It uses data from mapbox.com and darksky.net</p>
     <img class="portrait" src="/img/BeachPic.jpeg">
     </div>
     
